<resources>
    <string name="app_name">My Examples</string>
    <string name="action_settings">Settings</string>

    <string name="short_message">Lorem ipsum dolor sit amet.</string>
    <string name="medium_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="long_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="recycler_view">Recycler View</string>
    <string name="title">Title</string>
    <string name="image_example">example</string>

    <string name="dialog">Dialog</string>
    <string name="simple_dialog">Simple Dialog</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="bottom_sheet_dialog">Bottom Sheet Dialog</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>

    <string name="activity">Activity</string>
    <string name="activity_text">This is a value from another activity: %1$d</string>

    <string name="implicit_intent">Implicit Intent</string>
    <string name="chosen_image">Chosen image</string>
    <string name="choose_image">Choose Image</string>
    <string name="take_picture">Take Picture</string>

    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="notification_fragment">Notification Fragment</string>

    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="title_camera">Camera</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_slideshow">Slideshow</string>
    <string name="camera_fragment">Camera Fragment</string>
    <string name="gallery_fragment">Gallery Fragment</string>
    <string name="slideshow_fragment">Slideshow Fragment</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="view_pager">View Pager</string>

    <string name="datastore">DataStore</string>
    <string name="enter_key">Enter key…</string>
    <string name="enter_value">Enter value…</string>
    <string name="save">Save</string>
    <string name="read">Read</string>

    <string name="notification">Notification</string>
    <string name="show_notification">Show Notification</string>

    <string name="service">Service</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="send_data">Send Data</string>
    <string name="data_string">Data String</string>

    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="airplane_mode">Enable/Disable Airplane Mode</string>

</resources>
