<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_navigation_drawer"
    app:startDestination="@+id/camera_fragment">

    <fragment
        android:id="@+id/camera_fragment"
        android:name="com.gaugustini.myexamples.navigationdrawer.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/gallery_fragment"
        android:name="com.gaugustini.myexamples.navigationdrawer.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/slideshow_fragment"
        android:name="com.gaugustini.myexamples.navigationdrawer.SlideshowFragment"
        android:label="@string/title_slideshow"
        tools:layout="@layout/fragment_slideshow" />

</navigation>
