<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_bottom_navigation"
    app:startDestination="@+id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.gaugustini.myexamples.ui.bottomnavigation.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/dashboard_fragment"
        android:name="com.gaugustini.myexamples.ui.bottomnavigation.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/notifications_fragment"
        android:name="com.gaugustini.myexamples.ui.bottomnavigation.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>
