<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.dialog.DialogExamplesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_simple_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_dialog"
            app:layout_constraintBottom_toTopOf="@+id/button_custom_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_custom_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_dialog"
            app:layout_constraintBottom_toTopOf="@+id/button_bottom_sheet_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_simple_dialog" />

        <Button
            android:id="@+id/button_bottom_sheet_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_dialog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_custom_dialog" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
